package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_archive",
     "ocaml_ns_archive",
     "ocaml_module",
     "ocaml_signature",
     "ppx_executable",
     "ppx_module",
)

PPX_ARGS = []
DEPS_1 = []

#############################
####  Aggregate Targets  ####

#################
ocaml_ns_archive(  #1
    name       = "ppx_sexp_conv_lib_test",
    ns_name    = "ppx_sexp_conv_lib_test",
    manifest = [
        ":Conv_test"
    ],
)

######################## Modules & Signatures ########################
ocaml_signature(
    name          = "Conv_test.cmi",
    src           = "conv_test.mli",
    deps          = DEPS_1,
    ppx           = ":ppx_1.exe",
)

ocaml_module(
    name          = "Conv_test",
    struct        = "conv_test.ml",
    sig           = ":Conv_test.cmi",
    deps          = DEPS_1,
    ppx           = ":ppx_1.exe",
    ppx_args      = PPX_ARGS + ["-inline-test-lib", "ppx_sexp_conv_lib_test"]
)


###############
ppx_executable(
    name    = "ppx_1.exe",
    main    = ":Ppx_driver",
    prologue = [
        "@ppxlib//lib/ppxlib",
        "//src:ppx_sexp_conv",
        "@ppx_here//lib/ppx_here",
        "@ppx_inline_test//lib/ppx_inline_test"
    ],
)

#############
ppx_module(
    name       = "Ppx_driver",
    struct     = ":ppx_driver.ml",
    visibility = ["//visibility:public"],
    deps       = ["@ppxlib//lib/ppxlib"],
)

########
genrule(
    name = "__ppx_driver__",
    outs = ["ppx_driver.ml"],
    cmd = "\n".join([
        "echo \"(* GENERATED FILE - DO NOT EDIT *)\" > \"$@\"",
        "echo \"let () = Ppxlib.Driver.standalone ()\" >> \"$@\"",
    ])
)

